--- a/P8105_HW5_jao2195.md
+++ b/P8105_HW5_jao2195.md
@@ -237,3 +237,57 @@ Arm has higher Values, on average than the Control Arm, with the Control
 Arm remaining level around Value of 1.5 over the 8 week period and the
 Experimental Arm, generally increasing its Value over the 8 week period
 from 1.5 to 5.
+\################################################################################
+\### Problem 3
+\##################################################################
+\################################################################################
+
+When designing an experiment or analysis, a common question is whether
+it is likely that a true effect will be detected – put differently,
+whether a false null hypothesis will be rejected. The probability that a
+false null hypothesis is rejected is referred to as power, and it
+depends on several factors, including: the sample size; the effect size;
+and the error variance. In this problem, you will conduct a simulation
+to explore power in a one-sample t-test.
+
+### \[Problem 3.1\] First set the following design elements: 1) Fix n=30, 2) Fix σ=5, 3)Set μ=0, 4) Generate 5000 datasets from the model. Distibution x∼Normal\[μ,σ\].
+
+``` r
+### [Problem 3.1] - Setting up Simmulation
+#Setting the design elements
+n  <- 30            # 1.Sample size, n
+σ  <- 5            # 2.Standard deviation, σ 
+μ  <- 0            # 3.True mean, μ
+
+# Set the number of datasets to generate
+num_datasets <- 5000
+
+# Seed for reproducibility
+set.seed(123)
+
+# Generate 5000 datasets
+simulated_data <- matrix(rnorm(n * num_datasets, mean = μ , sd = σ), ncol = num_datasets)
+
+# Check the structure of the generated data
+str(simulated_data)
+```
+
+    ##  num [1:30, 1:5000] -2.802 -1.151 7.794 0.353 0.646 ...
+
+For each dataset, save μ̂ and the p-value arising from a test of H:μ=0
+using α=0.05 . Hint: to obtain the estimate and p-value, use broom::tidy
+to clean the output of t.test.
+
+Repeat the above for μ={1,2,3,4,5,6} , and complete the following:
+
+Make a plot showing the proportion of times the null was rejected (the
+power of the test) on the y axis and the true value of μ on the x axis.
+Describe the association between effect size and power.
+
+Make a plot showing the 1) Average estimate of μ̂ on the y axis and the
+true value of μ on the x axis. 2) Make a second plot (or overlay on the
+first) the average estimate of μ̂ only in samples for which the null was
+rejected on the y axis and the true value of μ on the x axis.
+
+Is the sample average of μ̂ across tests for which the null is rejected
+approximately equal to the true value of μ? Why or why not?
